--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<a-marker type="pattern" url="data/markers\Hiro.patt" markercontroller="name : Hiro"></a-marker>
 			<a-marker type="pattern" url="data/markers\Nutty.patt" markercontroller="name : Nutty"></a-marker>
 			<a-marker type="pattern" url="data/markers\NuttyCardboard.patt" markercontroller="name : NuttyCardboard"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-八德亭.patt" markercontroller="name : pattern-八德亭"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-圖書館.patt" markercontroller="name : pattern-圖書館"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-戶外教育及海洋教育中心_5.patt" markercontroller="name : pattern-戶外教育及海洋教育中心_5"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-校門口穿堂.patt" markercontroller="name : pattern-校門口穿堂"></a-marker>
